--- a/index.html
+++ b/index.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>테스트</title>
+    <title>데차 베스트 공략&팁</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <img src="images/derini.png"/>
+    <section class="header">
+        <div>
+            <p>요니가 일을 안한다.</p>
+            <p style="text-decoration:line-through">(??? : 답답하면 니들이 뛰던가)</p>
+            <p>그래서 직접 만들어따.</p>
+        </div>
+    </section>
+
+    <section class="forSeason">
+        <div class="title">
+            <h2 class="season"> 시즌 컨텐츠 편</h2>
+        </div>
+        <div class="content">
+            <ul id="season_content_li">
+
+            </ul>
+        </div>
+    </section>
+
+    <section class="forDejungja">
+        <div class="title">
+            <h2 class="dejungja">데정자 편</h2>
+        </div>
+        <div class="content">
+            <ul id="dejungja_content_li">
+
+            </ul>
+        </div>
+    </section>
+
+    <section class="forDerini">
+        <div class="title">
+            <h2 class="derini">데리니 편</h2>
+        </div>
+        <div class="content">
+            <ul id="derini_content_li">
+
+            </ul>
+        </div>
+    </section>
+
+    <section class="forDechungnyun">
+        <div class="title">
+            <h2 class="dechungnyun">데청년 편</h2>
+        </div>
+        <div class="content">
+            <ul id="dechungnyun_content_li">
+
+            </ul>
+        </div>
+    </section>
+    <script src="js/contents.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
