--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>데차 베스트 공략&팁</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css_200407001">
     <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
@@ -30,7 +30,7 @@
     <section id="contentsBody">
 
     </section>
-    <script src="js/contents.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/contents.js_200407001"></script>
+    <script src="js/main.js_200407001"></script>
 </body>
 </html>
